src/app/jobs/job-list/job-list.component.css
.container {
    height: 100%;
    overflow: auto;
}

table {
    width: 100%;
    table-layout: fixed;
    overflow: hidden;
    border-spacing: 0;
    border-collapse: separate;
}

tr {
    height: 41px;
}

tbody tr:hover {
    background-color: rgba(0, 0, 0, .08);
    cursor: pointer;
}

td, th {
    display: table-cell;
    padding: 0 4px;
    font-size: 14px;
    color: rgba(0, 0, 0, .87);
    border-bottom-color: rgba(0, 0, 0, .12);
    border-bottom-width: 1px;
    border-bottom-style: solid;
    text-align: left;
}

.job-completed td {
    color: rgba(0, 0, 0, .50);
}

th:first-of-type, td:first-of-type {
    padding-left: 8px;
}

td.column-state {
    width: 24px;
}

td.column-jobId {
    width: 2.7em;
}

td.column-customer {
    width: 1.8em;
}

td.column-date {
    width: 5.5em;
}

td.column-productsObj-name {
    width: 11em;
}

td.column-productsObj-count {
    width: 4em;
}

td.column-jobId button[mat-button].mat-button {
    padding: 0;
}

td.column-name div {
    display: flex;
    align-items: center;
}

td.column-name span.name {
    flex: 1 1 700px;
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
}

td.column-name span.buttons {
    display: none;
    flex: 0 0 40px;
}

td.column-name .mat-icon {
    font-size: 18px;
}

tr:hover td.column-name span.buttons {
    display: inherit;
}

